--- a/styles/index.css
+++ b/styles/index.css
@@ -32,15 +32,15 @@ main {
   background-color: var(--darkDesaturatedBlue);
 }
 main {
-  border-radius: 1.3rem 1.3rem 0 0;
+  border-radius: 0.5rem 0.5rem 0 0;
 }
 img,
 .image-container,
 .image-container::before {
-  border-radius: 0 1.3rem 0 0;
+  border-radius: 0 0.5rem 0 0;
 }
 footer {
-  border-radius: 0 0 1.3rem 1.3rem;
+  border-radius: 0 0 0.5rem 0.5rem;
 }
 .container {
   display: flex;
@@ -63,10 +63,9 @@ footer {
   justify-content: space-between;
   margin: 3rem auto;
 }
-.main-text > div > h1 {
+.main-text h1 {
   margin-bottom: 2rem;
-  font-size: 3.4rem;
-  letter-spacing: 0.2rem;
+  font-size: clamp(3.8rem, 3vw, 4rem);
 }
 .main-text p {
   color: var(--slightlyTransparentWhite1);
@@ -83,13 +82,14 @@ footer {
   align-items: start;
 }
 .stats h2 {
-  color: var(--slightlyTransparentWhite2);
+  color: var(--white);
+  font-weight: 700;
 }
 .stats p {
   text-transform: uppercase;
   font-family: var(--LexendDecaFont);
-  font-weight: 700;
-  color: var(--white);
+  font-weight: 400;
+  color: var(--slightlyTransparentWhite2);
 }
 .image-container {
   position: relative;
@@ -130,10 +130,10 @@ footer {
   img,
   .image-container,
   .image-container::before {
-    border-radius: 1.3rem 1.3rem 0 0;
+    border-radius: 0.5rem 0.5rem 0 0;
   }
   footer {
-    border-radius: 0 0 1.3rem 1.3rem;
+    border-radius: 0 0 0.5rem 0.5rem;
   }
   main,
   img,
