--- a/styles/index.css
+++ b/styles/index.css
@@ -94,6 +94,9 @@ footer {
   font-weight: 400;
   color: var(--slightlyTransparentWhite2);
 }
+.stats p:hover {
+  cursor: pointer;
+}
 .image-container {
   position: relative;
   width: 100%;
