--- a/styles/index.css
+++ b/styles/index.css
@@ -130,6 +130,12 @@ footer {
   color: var(--footerLink);
 }
 
+@media screen and (max-width: 920px) {
+.main-text {
+    width: 90%;
+    margin: 2rem auto;
+  }
+}
 @media screen and (max-width: 768px) {
   * {
     text-align: center;
@@ -157,10 +163,7 @@ footer {
   .text-container {
     height: 80vh;
   }
-  .main-text {
-    width: 90%;
-    margin: 2rem auto;
-  }
+  
 
   .stats {
     flex-flow: column;
