--- a/styles/index.css
+++ b/styles/index.css
@@ -75,6 +75,7 @@ img {
 .main-content {
   width: 70%;
   margin: 3rem auto;
+  transition: 0.5s;
 }
 .main-content h1 {
   font-size: clamp(3.8rem, 50%, 4rem);
